# psychotropic

./: .gitignore  LICENSE  Procfile  README.md  bot.py  dsstox.py  embeds.py  providers.py  pyproject.toml  requirements.txt  settings.py  toaster.py  utils.py
.github/workflows/: codeql-analysis.yml
cogs/: factsheets.py  science.py
psychotropic/: __init__.py  bot.py  dsstox.py  embeds.py  i18n.py  pnwiki.py  providers.py  settings.py  ui.py  utils.py
psychotropic/cogs/: admin.py  combos.py  factsheets.py  science.py  structuregame.py
psychotropic/cogs/games/: __init__.py  reagents.py  structure.py
psychotropic/data/: reagents.json  reagents.schema.json
psychotropic/locales/fr/LC_MESSAGES/: messages.po
psychotropic/providers/: __init__.py  dsstox.py  mixtures.py  pnwiki.py  protest.py  pubchem.py  tripsit.py
