[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychotropic"
description = 'A discord bot built for harm reduction and chemistry.'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
version = "0.0.1"
keywords = []
authors = [
  { name = "xyzt_", email = "xyzt@psychonaut.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "discord.py==1.5.1",
  "httpx==0.16.1",
  "Pillow==8.4.0",
]

[project.urls]
Documentation = "https://github.com/x-yzt/psychotropic#readme"
Issues = "https://github.com/x-yzt/psychotropic/issues"
Source = "https://github.com/x-yzt/psychotropic"

[tool.hatch.version]

